divs not table, circle animation working

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,29 +1,10 @@
-== README
+== Focus
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+=== Tags/Lenses
 
-Things you may want to cover:
+"All", aka "Any", points to logic that picks all tasks.
 
-* Ruby version
+Tasks *must* have a discrete number (usually one) of tags.
+A task *cannot* be tagged directly with "all" or "any".
 
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
 
